fix: remove lenis smooth scroll causing overflow issues

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -2,3 +2,8 @@
   margin: 3rem auto;
   max-width: var(--max-width);
 }
+
+.search {
+  margin-top: 3rem;
+  width: 75%;
+}
